--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,12 +7,17 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+amazon:
+  service: S3
+  access_key_id: "AKIAXJGGRVQYTGBGXYPV"
+  secret_access_key: "9sEpIzU/YEVyPtX6n42a5ZhRjlBlkiiElS84hF1X"
+  region: us-east-1
+  bucket: "amir-blog"
+  http_open_timeout: 0
+  http_read_timeout: 0
+  retry_limit: 0
+  upload:
+    server_side_encryption: "" # 'aws:kms' or 'AES256'
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
